# srbogrid

./: .bumpversion.cfg  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
notebooks/: tutorial.ipynb
srbogrid/: __init__.py  srbo.py
